codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__shutdown_in_progress.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 12853
expression: terminal.backend()
---
"───────────────────────────────────────┐"
"› Shutting down...                     │"
"                                       │"
"                                       │"
"───────────────────────────────────────┘"
